@@ -1,7 +1,7 @@
 /** @file termgenerator.cc
  * @brief TermGenerator class implementation
  */
-/* Copyright (C) 2007 Olly Betts
+/* Copyright (C) 2007,2012 Olly Betts
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -86,6 +86,12 @@ void
 TermGenerator::set_stemming_strategy(stem_strategy strategy)
 {
     internal->strategy = strategy;
+}
+
+void
+TermGenerator::set_max_word_length(unsigned max_word_length)
+{
+    internal->max_word_length = max_word_length;
 }
 
 void
